force-app/main/default/objects/Sym_Message_Bus__e/fields/Event_Message__c.field-meta.xml
<CustomField>
    <fullName>Event_Message__c</fullName>
    <label>Event Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>