force-app/main/default/objects/Sym_Message_Bus__e/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <label>Event Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>