force-app/main/default/objects/Sym_Message_Bus__e/fields/Event_Tracking_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Tracking_Id__c</fullName>
    <label>Event Tracking Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>